# Swapify

./: CLEANUP_REPORT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_README.md  DEPLOYMENT_TROUBLESHOOTING.md  PRODUCTION_DEBUG_GUIDE.md  PROJECT_STATUS_CHECKLIST.md  QUICK_START_DEPLOYMENT.md  README.md  SETUP.md  SUMMARY.md  core-features.md  faq-and-contact.md  getting-started.md  roadmap.md  security-and-infrastructure.md  step-by-step-tutorials.md  tokenomics-and-launch.md
.claude/: settings.local.json
.orchids/: orchids.json
OrderSwap Backend/: .env.example  DEPLOYMENT.md  README.md  package-lock.json  package.json  railway.json  tsconfig.json
OrderSwap Backend/prisma/: schema.prisma  (+1 more)
docs/: 01-introduction.md  02-getting-started.md  03-core-features.md  04-tutorials.md  05-tokenomics.md  06-security.md  07-roadmap.md  08-faq.md
frontend/: README.md  components.json  next.config.ts  package-lock.json  package.json
idls/: weswap.json  weswap.ts
privacy/: .env.example  .gitignore  README.md  package-lock.json  package.json  tsconfig.json
privacy-ui/: next.config.ts  package.json  pnpm-lock.yaml
program/: .gitignore  Anchor.toml  Cargo.toml  package-lock.json  package.json  tsconfig.json
program/programs/weswap/: Cargo.toml
program/programs/weswap/src/: error.rs  events.rs  lib.rs  state.rs
program/programs/weswap/src/instructions/: create_strategy.rs  deposit_escrow.rs  execute_exit.rs  execute_strategy.rs  initialize.rs  manage_keepers.rs  mod.rs  withdraw_escrow.rs
program/programs/weswap/src/state/: global.rs  strategy.rs
(+352 files in other folders)
